added User & Role models

--- a/my-recipes-app-BE/src/main/resources/application.properties
+++ b/my-recipes-app-BE/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.data.mongodb.database=recipes_db
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+
+# App Properties
+recipes.app.jwtSecret= recipesSecretKey
+recipes.app.jwtExpirationMs= 86400000
